--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello Rigo with Vanilla.js</title>
+    <title>Bubble_sort_card</title>
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
@@ -12,8 +12,12 @@
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
-  <body>
-    <div class="container-fluid text-center">
+  <body style="background-color: rgb(0,128,0,.58)">
+    <script src="./app.js"></script>
+  </body>
+</html>
+
+<!--<div class="container-fluid text-center">
       <h1 class="mt-5">Hello Rigo!</h1>
       <img src="./rigo-baby.jpg" />
       <p class="alert alert-warning mt-4">
@@ -24,6 +28,4 @@
         Made with ❤️ by
         <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
       </div>
-    </div>
-  </body>
-</html>
+    </div>-->
