--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bubble_sort_card</title>
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
       integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
@@ -13,6 +19,9 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body style="background-color: rgb(0,128,0,.58)">
+    <!--Aqui se ubicara el menu se creara una function Menu-->
+    <!---Aqui ira el 1° tablero que presentara las cartas-->
+    <!---Aqui ira el tablero Master con el metodo sort-->
     <script src="./app.js"></script>
   </body>
 </html>
